apps/tui/crates/mutx/src/snapshots/mutx__snapshot_tests__execute_command_expanded_preserves_stdout_stderr_interleaving.snap
---
source: apps/tui/crates/mutx/src/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
- Run cargo build (0ms)
  $ cargo build
  Compiling a
  warning: b
  Compiling c
  exit 0

backgrounds:
A=#070808  B=#111312  .=reset
0: A80
1: B80
2: B80
3: B80
4: B80
5: B80
